# sqwark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  justfile
.github/: dependabot.yml
.github/workflows/: release.yml
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/alerts/: __init__.py  slack.py
backend/app/routes/: api.py  auth.py  web.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: ExportButton.vue  FeedbackCard.vue  FeedbackList.vue  LoginPage.vue  SearchBar.vue  SortToggle.vue  TagFilter.vue  ThemeToggle.vue
