[project]
name = "sqwark"
version = "0.1.0"
description = "Feedback Aggregator"
requires-python = ">=3.13"
dependencies = [
    "robyn>=0.82.0",
    "slack-sdk>=3.0",
    "sqlalchemy>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
